src/main/scoringCode/problem/p_1/sNo_26/error.out
../problem/p_1/sNo_26/26.c:1:1: error: stray ‘\354’ in program
 오오잉?
 ^
../problem/p_1/sNo_26/26.c:1:2: error: stray ‘\230’ in program
 오오잉?
  ^
../problem/p_1/sNo_26/26.c:1:3: error: stray ‘\244’ in program
 오오잉?
   ^
../problem/p_1/sNo_26/26.c:1:4: error: stray ‘\354’ in program
 오오잉?
    ^
../problem/p_1/sNo_26/26.c:1:5: error: stray ‘\230’ in program
 오오잉?
     ^
../problem/p_1/sNo_26/26.c:1:6: error: stray ‘\244’ in program
 오오잉?
      ^
../problem/p_1/sNo_26/26.c:1:7: error: stray ‘\354’ in program
 오오잉?
       ^
../problem/p_1/sNo_26/26.c:1:8: error: stray ‘\236’ in program
 오오잉?
        ^
../problem/p_1/sNo_26/26.c:1:9: error: stray ‘\211’ in program
 오오잉?
         ^
../problem/p_1/sNo_26/26.c:1:10: error: expected identifier or ‘(’ before ‘?’ token
 오오잉?
          ^
